--- a/geoTestMod.html
+++ b/geoTestMod.html
@@ -7,7 +7,7 @@
     <title>Find Address</title>
     <link rel="stylesheet" href="https://js.arcgis.com/3.34/dijit/themes/claro/claro.css">
     <link rel="stylesheet" href="https://js.arcgis.com/3.34/esri/css/esri.css">
-    <link rel="stylesheet" href="geoTestStyle.css">
+    <link rel="stylesheet" href="styles/geoTestStyle.css">
 
     <script src="https://js.arcgis.com/3.34/"></script>
     
@@ -42,5 +42,5 @@
 
     </div>
   </body>
-  <script src="geoTestScript.js"></script>
+  <script src="scripts/geoTestScript.js"></script>
 </html>
