Added interactions to game file

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="phaser.min.js"></script>
-    <script type="text/javascript" src="game.js"></script>
-    <title>Package Getter</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.jsdelivr.net/npm/phaser@3.14.0/dist/phaser.min.js"></script>
+  <script src= "scripts/gamePackage.js"></script>
+  <title>Phaser Module 2</title>
 </head>
 <body>
-    
+  <h1>Phaser Module 2 Tutorial</h1>
+  <h2>Use the arrow keys to move around use space to pickup packages.</h2>
+  <div id="game"></div>
 </body>
 </html>
