--- a/index.html
+++ b/index.html
@@ -5,28 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.14.0/dist/phaser.min.js"></script>
   <script src= "scripts/gamePackage.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <title>Phaser Module 2</title>
 </head>
 <body>
-  <h1>Phaser Module 2 Tutorial</h1>
-  <h2>Use the arrow keys to move around use space to pickup packages.</h2>
-  <a href="" id="full-screen">Go Fullscreen!</a>
-  <div id="game"></div>
+  <h1 class="mt-2 ml-2">Drone Delivery</h1>
+  <button onclick="activateFullscreen(document.documentElement)" class="btn btn-primary mt-2 ml-2">Go Fullscreen!</button>
+  <button onclick="exitFullscreen(document.documentElement)" class="btn btn-primary mt-2 ml-2">Exit</button>
+  <div id="game" class="mt-2"></div>
 </body>
 <script>
-  let game = document.getElementById('game');
-  let fullScreen = document.getElementById('full-screen');
-
-  fullScreen.addEventListener('click', function() {
-    if (game.requestFullscreen) {
-      game.requestFullscreen()
-    } else if (game.webkitRequestFullscreen) {
-      game.webkitRequestFullscreen()
-    } else if (game.mozRequestFullScreen) {
-      game.mozRequestFullScreen()
-    } else if (game.msRequestFullscreen) {
-      game.msRequestFullscreen()
+  function activateFullscreen(element) {
+    if(element.requestFullscreen) {
+      element.requestFullscreen();        
     }
-  })
+    else if (element.mozRequestFullScreen) {
+      element.mozRequestFullScreen();     
+    }
+    else if (element.webkitRequestFullscreen) {
+      element.webkitRequestFullscreen();  
+    }
+    else if(element.msRequestFullscreen) {
+      element.msRequestFullscreen();      
+    }
+  };
+
+  function exitFullscreen() {
+    if(document.exitFullscreen) {
+      document.exitFullscreen();
+    } else if (document.mozCancelFullScreen) {
+      document.mozCancelFullScreen();
+    } else if (document.webkitExitFullscreen) {
+      document.webkitExitFullscreen();
+    }
+  };
 </script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </html>
