--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <h2>Use the arrow keys to move around use space to pickup packages.</h2>
   <a href="" id="full-screen">Go Fullscreen!</a>
   <div id="game"></div>
+  <div id="Timer">
+<h2>Timer</h2>
+<p id="TimerDisplay">00:30</p>
+</div>
 </body>
 <script>
   let game = document.getElementById('game');
