Organized and added main menu

--- a/DeprecatedFiles/geoTestSimple.html
+++ b/DeprecatedFiles/geoTestSimple.html
@@ -13,6 +13,6 @@
   <div id="viewDiv"></div>
 </body>
 <footer>
-  <script src="scripts/geoTestSimple.js"></script>
+  <script src="geoTestSimple.js"></script>
 </footer>
 </html>
