an image corrisponding to the weather now appears to the right of the map

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <h1>Phaser Module 2 Tutorial</h1>
   <h2>Use the arrow keys to move around use space to pickup packages.</h2>
   <a href="" id="full-screen">Go Fullscreen!</a>
+  <div style="float: right; margin-right: 5em;">
+    <h2 style="margin-right: 4em;" id="weatherText"></h2>
+    <img id="weatherImage" alt="weather">
+  </div>
   <div id="game"></div>
   <div id="Timer">
 <h2>Timer</h2>
