--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
     }
   };
 
-  let counter = 160;
+  // let counter = 160;
 
-  setInterval( function() {
-    counter--;
+  // setInterval( function() {
+  //   counter--;
 
-    if (counter >= 0) {
-        countID = document.getElementById('count')
-        countID.innerHTML = counter;
-    }
-  }, 1000)
+  //   if (counter >= 0) {
+  //       countID = document.getElementById('count')
+  //       countID.innerHTML = counter;
+  //   }
+  // }, 1000)
 </script>
 <script src= "scripts/gamePackage.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
