Added game over and final score alert

--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
   <h1 class="mt-2 ml-2 container">Drone Delivery</h1>
   <div class="container">
     <button onclick="activateFullscreen(document.documentElement)" class="btn btn-primary mt-2 ml-2">Go Fullscreen!</button>
-    <button onclick="exitFullscreen(document.documentElement)" class="btn btn-primary mt-2 ml-2">Exit</button>
+    <button onclick="exitFullscreen(document.documentElement)" class="btn btn-primary mt-2 ml-2">Exit Fullscreen</button>
     <button class="btn btn-primary mt-2 ml-2" id="startGameButton" onclick="document.location.reload(true)">Restart Game!</button>
   </div>
 
+<div>
+  <h5 id="instructions"></h5>
+</div>
 
+<div>
+  <h5 id="instructions2"></h5>
+</div>
   <div>
     <h2 id="count"></h2>
   </div>
